- Fixed an Issue where crops in a waterpot would only grow with a Light Block above
- Fixed an Issue where BD wouldn't place and pickup the Storage Jar correctly
- Fixed an Issue where eating a placed pie wouldn't restore hunger
- Fixed an Issue where Pebbles and Rocks wouldn't drop when broken
- Fixed an Issue where Flowering Clover would always drop the non flowering type

## Version 1.0.0 Beta 22w29 ##

- Changed Initialise Class from BlockCrops to BlockMycelium
- Added Nutrition to Dirt, Grass and Farmland

- Added Compost
- Added Damaged and Mossy Logs

- Added Short Grass and a copy of Tall Grass
- Added Clover and Flowering variants
- Added Moss Carpet
- Added Flowering Lily Pad
- Added Decorative Stone & Sandstone Pebbles and Rocks

- Added Flowering Lily Pad to generate in Swamps
- Split River Biome into seperate River Biomes to control decoration better

- Added Gen Short Grass to all Biomes
- Added Gen Tall Grass and Tall Fern to Tagia and Forest Biomes
- Added Gen Clover to Taiga, Forest and Plains Biomes
- Added Gen Stone Rocks and Pebbles to ExtremeHills, Frozen, Plains and Forest Rivers
- Added Gen Sandstone Rocks and Pebbles to Desert Rivers

- Changed Farmland to use overlay for fertilizers
- Added textures

- Added new Pumpkin and Melon Growth
- Added Pumpkin and Melon Varieties
- Replaced Pumpkin and Melon Seeds

- Edited GuiIngame and SlotArmor to make new Pumpkins Wearable

- Added Pie Crust 
- Added Pie and Cake Slices
- Added Pie Recipes
- Added Gourd Recipes
- Changed Pumpkin Pie to require Pie Crust + Pumpkin

- Added new Pumpkins to World Gen

- Added Bamboo 
- Added to Bamboo World Gen
- Added Bamboo Packing

- Added Pumpkin Pie Packing
- Added Ability to Place and Eat Pumpkin Pies like Cake

- Added Stone, Iron and Diamond Knives
- Added Knife Recipes
- Added Ability to get Pie Slices from Placed Pie

- Replaced Cake
- Added Ability to get Cake Slices from Placed Cake

- Added Fish Trap
- Added Salmon, Cod and Tropical Fish